# decompile

./: .dockerignore  .gitignore  Dockerfile  DumpAllDecompile.java  MANIFEST.in  README.md  crackme  decompile  enhance_with_copilot  ghidra-dump  index.html  pyproject.toml
apt/: Packages  decompile_0.1.0_all.deb  index.html
crackme.ghidra-out/: crackme.disassembly.asm  crackme.enhanced.c  crackme.pseudocode.c  crackme.summary.txt
decompile_tool/: __init__.py  cli.py  enhance_with_copilot  heuristics.py
packaging/: README.md  release.sh
packaging/aur/: .SRCINFO  PKGBUILD
packaging/deb/: build-apt-repo.sh  build-deb.sh  control  install.sh
